<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2015 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="color_picker_title">Color Picker</string>
    <string name="color_picker_tab_icon">Color Picker tab icon</string>

    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_alpha">Alpha</string>
    <string name="color_hex">HEX</string>

    <string name="color_picker_apply">Apply</string>
    <string name="color_picker_cancel">Cancel</string>
    <string name="color_picker_current_color" tools:ignore="MissingTranslation">current</string>
    <string name="color_picker_new_color" tools:ignore="MissingTranslation">new</string>
    <string name="color_picker_pipette" tools:ignore="MissingTranslation">Pipette</string>
    <string name="color_picker_save_dialog_title" tools:ignore="MissingTranslation">Save changes?</string>
    <string name="color_picker_save_dialog_msg" tools:ignore="MissingTranslation">Do you want to save your changes?</string>
    <string name="color_picker_no" tools:ignore="MissingTranslation">no</string>
    <string name="color_picker_yes" tools:ignore="MissingTranslation">yes</string>
    <string name="color_picker_history_recently_used" tools:ignore="MissingTranslation">recently used</string>

</resources>
