<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color_picker_base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/container"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentStart="true"
                app:strokeColor="@color/pocketpaint_color_picker_separation_color"
                app:strokeWidth="2dp">

                <View
                    android:id="@+id/color_picker_current_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start" />

                <View
                    android:id="@+id/color_picker_new_color_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/color_picker_current_color"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/pocketpaint_color_picker_gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/color_picker_new_color"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/pocketpaint_color_picker_gray"
                    android:textSize="12sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:id="@+id/color_picker_pipette_btn"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/pocketpaint_color_picker_btn_color"
                android:text="@string/color_picker_pipette"
                app:icon="@drawable/ic_color_picker_pipette"
                app:iconGravity="textStart"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <org.catrobat.paintroid.colorpicker.ColorHistoryView
            android:id="@+id/color_history_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:id="@+id/color_history_text_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:weightSum="2"
            android:visibility="gone">

            <TextView
                android:id="@+id/color_history_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/color_picker_history_recently_used"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/pocketpaint_color_picker_gray"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/pocketpaint_color_picker_separation_color" />

        <org.catrobat.paintroid.colorpicker.ColorPickerView
            android:id="@+id/color_picker_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp" />

        <org.catrobat.paintroid.colorpicker.AlphaSliderView
            android:id="@+id/color_alpha_slider"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
