<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Catroid: An on-device graphical programming language for Android devices
 *  Copyright (C) 2010-2011 The Catroid Team
 *  (<http://code.google.com/p/catroid/wiki/Credits>)
 *  
 *  Paintroid: An image manipulation application for Android, part of the
 *  Catroid project and Catroid suite of software.
 *  
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *  
 *  An additional term exception under section 7 of the GNU Affero
 *  General Public License, version 3, is available at
 *  http://www.catroid.org/catroid_license_additional_term
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Affero General Public License for more details.
 *   
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<!-- LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:gravity="center">
			< ImageView android:layout_width="64dip"
				android:layout_height="fill_parent"
				android:scaleType="fitXY"
				android:layout_marginTop="10dip"
				android:id="@+id/color_rgb_imgpreview"
				android:background="@drawable/checkeredbg_repeat"
				android:layout_marginRight="10dip">
			</ImageView  >
		</LinearLayout-->
		<!-- LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical" android:layout_weight="1" -->
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content" 
				android:orientation="horizontal"
				android:layout_marginTop="16dp"
				android:paddingLeft="6dp"
				android:paddingRight="6dp">

				<TextView
				    android:id="@+id/color_rgb_tvRed"
				    android:layout_width="75dp"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:text="@string/color_red"
				    android:textColor="#FF0000" />

				<SeekBar
				    android:id="@+id/color_rgb_seekbar_red"
				    android:layout_width="180dp"
				    android:layout_height="wrap_content"
				    android:max="255" />

				<TextView
				    android:id="@+id/rgb_red_value"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="13dp"
				    android:text="255"
				    android:textColor="@color/title_color_blue" />

			</LinearLayout>
			
			
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="16dp"
				android:paddingLeft="6dp"
				android:paddingRight="6dp">
				
				<TextView
				    android:id="@+id/color_rgb_tvGreen" 
				    android:layout_width="75dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:textColor="#00FF00"			
					android:text="@string/color_green" />
				
				<SeekBar
				    android:id="@+id/color_rgb_seekbar_green"
					android:layout_width="180dp"
					android:layout_height="wrap_content"
					android:max="255" />
				
				<TextView
				    android:id="@+id/rgb_green_value"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="13dp"
				    android:text="255"
				    android:textColor="@color/title_color_blue" />
				
			</LinearLayout>
			
			
			<LinearLayout 
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="16dp"
				android:paddingLeft="6dp"
				android:paddingRight="6dp">
				
				<TextView
				    android:id="@+id/color_rgb_tvBlue"
				    android:layout_width="75dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:textColor="#0000FF"					
					android:text="@string/color_blue" />
				
				<SeekBar
				    android:id="@+id/color_rgb_seekbar_blue" 
					android:layout_width="180dp"
					android:layout_height="wrap_content"
					android:max="255" />
				
				<TextView
				    android:id="@+id/rgb_blue_value"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="13dp"
				    android:text="255"
				    android:textColor="@color/title_color_blue" />
				
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="16dp"
				android:paddingLeft="6dp"
				android:paddingRight="6dp">
				
				<TextView
				    android:id="@+id/color_rgb_tvAlpha" 
					android:layout_width="75dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:textColor="@android:color/white"			
					android:text="@string/color_alpha" />
				
				<SeekBar
				    android:id="@+id/color_rgb_seekbar_alpha" 
					android:layout_width="180dp"
					android:layout_height="wrap_content"
					android:max="255" />
				
				<TextView
				    android:id="@+id/rgb_alpha_value"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="13dp"
				    android:text="255"
				    android:textColor="@color/title_color_blue" />
				
			</LinearLayout>
		<!-- /LinearLayout-->
	<!-- /LinearLayout -->
</LinearLayout>
